# lte-rogue-detector

./: .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/skills/migrate/: SKILL.md
alembic/: env.py
alembic/versions/: b0ba12125bbd_initial_schema.py  b449560ba86f_messages_nullable_session_id_add_s1ap_.py  c6921309ddf3_sessions_cell_id_nullable.py  d1a7f3e2c9b4_messages_partial_index_unsessionized.py  e2f5a0d8c1a9_messages_sessions_cell_identity.py
db_dump/: alembic_version.metadata.json  alembic_version.ndjson  messages.metadata.json  messages.ndjson  sessions.ndjson
detector.db.dump.20260512T111215Z/: _alembic_tmp_sessions.metadata.json  alerts.metadata.json  alerts.ndjson  cells.metadata.json  sessions.metadata.json
detector/src/lte_rogue_detector/: __init__.py  cli.py  db.py  engine.py  nas_types.py  sessionize.py
detector/src/lte_rogue_detector/rules/: __init__.py  aka_skipped_or_failed.py  base.py  imsi_cleartext_with_guti.py
detector/tests/: conftest.py  test_rules.py  test_sessionize.py
docs/: schema.md
sample_pcaps/: legit_attach.json  legit_attach.pcap  rogue_imsi_cleartext.json  rogue_imsi_cleartext.pcap
sample_pcaps/colte/: README.md  fetch.sh
sample_pcaps/fbsdetector/: README.md  exp1_nas.pcap  exp1_nas_label.txt  exp2_nas.pcap  exp2_nas_label.txt  exp3_nas.pcap  exp3_nas_label.txt  exp4_nas.pcap  exp4_nas_label.txt  exp5_nas.pcap  exp5_nas_label.txt  exp6_nas.pcap  exp6_nas_label.txt  exp7_nas.pcap  exp7_nas_label.txt  exp8_nas.pcap  exp8_nas_label.txt  exp9_nas.pcap  exp9_nas_label.txt
scripts/: craft_imsi_cleartext.py  migrate.py
sniffer/: CMakeLists.txt
sniffer/src/: bitreader.cpp  bitreader.hpp  db.cpp  db.hpp  framing.cpp  framing.hpp  ingest.cpp  ingest.hpp  main.cpp  nas.cpp  nas.hpp  nas_ies.cpp  nas_ies.hpp  s1ap.cpp  s1ap.hpp  types.hpp
sniffer/tests/: CMakeLists.txt  test_bitreader.cpp  test_framing.cpp  test_nas.cpp  test_s1ap.cpp
