[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lte-rogue-detector"
version = "0.1.0"
description = "Passive detector for IMSI catchers and rogue eNodeBs"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9"]

[project.scripts]
lte-rogue-detector = "lte_rogue_detector.cli:main"

[tool.setuptools.packages.find]
where = ["detector/src"]

[tool.pytest.ini_options]
testpaths = ["detector/tests"]
addopts = "-ra"
